# netbee

./: CMakeLists.txt  FECTURE.md  README  runnetbee.sh
doc/: netbee_server.txt
inc/: utils.h
inc/core/: core.h
src/: CMakeLists.txt  netbee_server.c
src/client/: CMakeLists.txt  client.c
src/core/: core.c  core.h
src/server/: CMakeLists.txt  server.c
src/utils/: utils.c
